@@ -884,6 +884,8 @@ Miscellaneous
 - In SCIPdebugMsg(), SCIPsetDebugMsg(), SCIPstatDebugMsg() strip directory from filename.
 - Recompute activity of rows when checking LP solutions instead of trusting the value given by the LP solver
 - The define NPARASCIP has been replaced by SCIP_THREADSAFE
+- Parameters are not reset to their default values before activating an emphasis setting; this now allows to combine
+  different emphasis settings.
 
 Known bugs
 ----------
